# yos

./: .bazelrc  .bochsrc  .clang-format  .gitignore  BUILD.bazel  WORKSPACE  build.sh  clear_cache.bash  makefile  readme.md
boot/: BUILD.bazel  boot_sector.asm  disk_load.asm  gdt.asm  hello_world.asm  linker.ld  load_kernel.asm  print_string.asm  print_string_pm.asm  switch_to_long_mode.asm  switch_to_pm.asm
kernel/: idt.h  interrupt.h  io.h  kernel.c  kernel_entry.asm  linker.ld  multiply.h  process.h  types.h
kernel/arch/x86/: BUILD.bazel  gdt.c  gdt.h  msr.h  segments.h  syscall.c  syscall.h
kernel/devices/: BUILD.bazel  keyboard.c  keyboard.h  pic.c  pic.h
kernel/interrupt/: ARCHIVED_idt.asm  BUILD.bazel  idt.asm  idt.c  idt.h  isr.asm  isr.h
kernel/io/: ARCHIVED_io.asm  BUILD.bazel  io.asm  io.c  io.h
kernel/main/: BUILD.bazel  main.c
kernel/src/: BUILD.bazel  idt.c  io.asm  kernel.c  kernel_entry.asm  keyboard.c  load_idt.asm  load_idt_impl.asm  main.c  multiply.asm
support/bazel/: c_rules.bzl  os_image.bzl
support/bazel/compilers/: c_rules.bzl
support/bazel/toolchains/: BUILD.bazel  c_toolchain.bzl
support/format/: bazel-buildifier.sh  clang-format.sh
support/release/: make_os_image.py
tool_chains/bazel/: c_rules.bzl  make_os_image.py  os_image.bzl
tool_chains/format/: bazel-buildifier.sh
