load("//tool_chains/bazel:c_rules.bzl", "y_cc_library")

y_cc_library(
    name = "pic",
    srcs = [
        ":pic.c",
    ],
    hdrs = [
        ":pic.h",
    ],
    visibility = ["//visibility:public"],
)

y_cc_library(
    name = "keyboard",
    srcs = [
        ":keyboard.c",
    ],
    hdrs = [
        ":keyboard.h",
    ],
    deps = [
        ":pic",
        "//kernel/io:io",
    ],
    visibility = ["//visibility:public"],
)
