load("//support/bazel/compilers:c_rules.bzl", "y_cc_library")

y_cc_library(
    name = "pic",
    srcs = [
        ":pic.c",
    ],
    hdrs = [
        ":pic.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//kernel/io",
    ],
)

y_cc_library(
    name = "keyboard",
    srcs = [
        ":keyboard.c",
    ],
    hdrs = [
        ":keyboard.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":pic",
        "//kernel/io",
    ],
)
