load("//support/bazel:c_rules.bzl", "y_cc_library")

y_cc_library(
    name = "interrupt",
    srcs = [
        ":idt.asm",
        ":idt.c",
        ":isr.asm",
    ],
    hdrs = [
        ":idt.h",
        ":isr.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//kernel/io",
    ],
)
