load("//support/bazel/compilers:c_rules.bzl", "y_cc_library")

y_cc_library(
    name = "interrupt",
    srcs = [
        ":idt.c",
        ":isr.asm",
    ],
    hdrs = [
        ":idt.h",
        ":isr.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//kernel/io",
    ],
)
