load("//support/bazel/compilers:c_rules.bzl", "y_cc_binary")

y_cc_binary(
    name = "kernel",
    srcs = [
        ":kernel_entry.asm",
        ":main.c",
    ],
    linker_command_file = "//kernel:linker.ld",
    visibility = ["//visibility:public"],
    deps = [
        "//kernel/arch/x86:gdt",
        "//kernel/devices:keyboard",
        "//kernel/devices:pic",
        "//kernel/interrupt",
    ],
)
